# colorpipe

./: .travis.yml  CMakeLists.txt
include/colorpipe/: colorpipe.h  loop_stage.h  pipeline.h  pixels.h  scale_stage.h  vector_pipeline.h
src/: libcolorpipe.cc
test/: CMakeLists.txt  External_GTest.cmake
test/src/: loop_pipeline_test.cc  main.cc  pipeline_stage_mock.h  pixels_test.cc  scale_stage_test.cc  vector_pipeline_test.cc
